# MusicPod

./: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
cpp/: CMakeLists.txt  imageSharpening.cpp  myapp.h  myapplication.cpp  stackblur.h
cpp/avir/: avir_float4_sse.h  thread_pool.hpp
java/com/example/myapplication/: FontType.kt  HomeView.kt  MainActivity.kt  MusicPodSettings.kt  Network.kt  Playlist.kt  SonglistView.kt  ThemeCustomization.kt  TrackWaitingUi.kt  Viewtype.kt  currentTrackUi.kt  musicItem.kt  searchbar.kt
res/drawable/: _11871_pause_icon.xml  _doticon.xml  cancel_black_24dp.xml  circle.xml  equalizer.xml  fast_forward.xml  heart.xml  heartfilled.xml  play_button.xml  plusicon.xml
res/layout/: main.xml
res/values/: strings.xml  themes.xml
res/values-night/: themes.xml
res/xml/: file_paths.xml
